feat: added some routing logic to home page elements

--- a/blog-ui/src/components/HomePageSections/FeatureCards/FeatureCards.css
+++ b/blog-ui/src/components/HomePageSections/FeatureCards/FeatureCards.css
@@ -25,3 +25,9 @@
 .feature-text {
     color: #555;
 }
+
+.feature-card-link {
+    text-decoration: none;
+    color: inherit;
+    display: block;
+}
