--- a/blog-ui/src/pages/PublicBlogsPage/publicBlogs.css
+++ b/blog-ui/src/pages/PublicBlogsPage/publicBlogs.css
@@ -15,3 +15,18 @@
 .blog-preview {
     margin: 12px 0;
 }
+
+.no-blogs-container {
+    text-align: center;
+    padding: 40px 0;
+}
+
+.no-blogs-container h3 {
+    margin-bottom: 8px !important;
+    font-weight: 600 !important;
+}
+
+.no-blogs-container p {
+    font-size: 14px !important;
+    color: #777 !important;
+}
