--- a/blog-ui/src/components/layout/Header/index.css
+++ b/blog-ui/src/components/layout/Header/index.css
@@ -29,3 +29,13 @@
 .register-btn {
     background-color: #19d26c !important;
 }
+
+.my-blog-btn {
+    background-color: #3b19d2 !important;
+    border: 1px solid #3b19d2 !important;
+    color: #ffffff !important;
+}
+
+.logout-btn {
+     background-color: #d2191c !important;
+}
